[PN-20340] feat: added @toString.Exclude to remove sensitive data